--- a/checkout.html
+++ b/checkout.html
@@ -142,8 +142,65 @@
                 <input type="text" name="" value="" class="form-control">
                 <span class="desc">Nama pemesanan sesuai KTP/SIM/Paspor</span>
               </div>
-              
+              <div class="form-row">
+                <div class="col">
+                  <label for="inputCity">No. Handphone</label>
+                  <div class="form-row label-bottom">
+                    <div class="form-group col-md-4">
+                      <input type="text" class="form-control" id="inputID" value="+62">
+                    </div>
+                    <div class="form-group col-md-8">
+                      <input type="text" class="form-control" id="inputNumber">
+                    </div>
+                    <span class="desc">Contoh: +62 812345678, untuk Kode Negara (+62) dan No. Handphone 0812345678</span>
+                  </div>
+                </div>
+                <div class="form-group col">
+                  <label for="inputCity">Email</label>
+                  <input type="email" class="form-control" id="inputEmail">
+                  <span class="desc">Contoh: email@example.com</span>
+                </div>
+              </div>
+              <div class="action">
+                <button type="submit" class="btn btn-primary">LANJUTKAN</button>
+              </div>
             </form>
+          </div>
+        </div>
+        <div class="col-md-5 col-12">
+          <div class="box-information-input">
+            <div class="box-title">
+              <h2>Kereta Pergi</h2>
+              <p>Rabu, 15 Agu 2018</p>
+            </div>
+            <div class="inner-information">
+              <p class="name-train">Ceramai</p>
+              <p class="blok-train">Bisnis (B)</p>
+              <div class="list-route">
+                <ul>
+                  <li class="from">
+                    <div class="block">
+                      <span class="boarding">17:40</span>
+                      <span class="date">Jul 27, 2018</span>
+                    </div>
+                    <div class="block">
+                      <span class="boarding">Jakarta (GMR)</span>
+                      <span class="date">Stasiun Gambir</span>
+                    </div>
+                  </li>
+                  <li class="to">
+                    <div class="block">
+                      <span class="boarding">09:06</span>
+                      <span class="date">Jul 28, 2018</span>
+                    </div>
+                    <div class="block">
+                      <span class="boarding">Malang (ML</span>
+                      <span class="date">Stasiun Malang</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
