--- a/detail-pemesanan-sukses.html
+++ b/detail-pemesanan-sukses.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pasar Produk BUMN | Detail Pemesanan</title>
+    <title>Pasar Produk BUMN | Detail Pemesanan Sukses</title>
 
     <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -151,33 +151,61 @@
         <div class="col">
           <div class="content-bar">
             <div class="top-block">
-              <strong class="recent">Recent</strong>
-              <button type="button" name="button" class="btn btn-grey"><i class="fa fa-sliders" aria-hidden="true"></i> Filter</button>
+              <a href="#"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
+              <button type="button" name="button"><i class="fa fa-download" aria-hidden="true"></i> DOWNLOAD RECEIPT</button>
             </div>
             <div class="area-to">
-              <span class="text-up">Purchaed on : Monday, 11 June 2018, 03:03</span>
-              <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              <span class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</span>
+              <span class="booking">Booking ID <strong>3124566</strong></span>
             </div>
-            <div class="box-profile no-shadow">
+            <div class="box-profile">
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
               <div class="purchase-info">
-                <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                <p><strong>Purchase Successful</strong></p>
+                <span class="desc">Monday, 11 June 2018, 03:03</span>
               </div>
               <div class="price-detail">
-                <strong class="price-desc">Rp. 438.500</strong>
+                <p>Rp. 438.500</p>
+                <a class="accoridon-show" id="Opened">Price Details <i class="fa fa-angle-down" aria-hidden="true"></i></a>
               </div>
             </div>
-            <div class="next-information">
-              <div class="clock">
-                <img src="assets/img/clock.png" alt="" class="img-fluid">
-                <span>Waiting for Payment Proof</span>
+            <div class="pricelist" id="ListPrice">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <tr>
+                    <td>Lion Air (Dewasa)</td>
+                    <td>Rp. 305.800</td>
+                  </tr>
+                  <tr class="green">
+                    <td>Bagasi PLM - CGK</td>
+                    <td>Rp. 0</td>
+                  </tr>
+                  <tr class="green">
+                    <td>Kode Unik</td>
+                    <td>Rp. -177</td>
+                  </tr>
+                  <tr class="green">
+                    <td>Pembayaran</td>
+                    <td>Rp. -305.623</td>
+                  </tr>
+                  <tr class="total">
+                    <td>Total</td>
+                    <td>Rp. 305.623</td>
+                  </tr>
+                </table>
               </div>
-              <div class="dropdown show">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Continue to Payment <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Continue to Payment</a>
-                  <a class="dropdown-item red" href="#">Cancel Purchase</a>
+            </div>
+            <h4 class="title-box">Product Details</h4>
+            <div class="box-profile">
+              <div class="purchase-info details">
+                <p>Palembang (PLM)  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>  Jakarta (CGK)</p>
+              </div>
+              <div class="price-detail block">
+                <div class="maskapai">
+                  <img src="assets/img/citilink.png" alt="" class="logo">
+                  <span class="code">Citilink QG-980</span>
+                  <label class="label">E-TICKET ISSUED</label>
+                  <a href="#" class="link" >Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
