add file fix detail-pemesanan

--- a/detail-pemesanan.html
+++ b/detail-pemesanan.html
@@ -152,7 +152,11 @@
           <div class="content-bar">
             <div class="top-block">
               <strong class="recent">Recent</strong>
-              <button type="button" name="button" class="btn btn-grey"><i class="fa fa-sliders" aria-hidden="true"></i> Filter</button>
+              <button type="button" name="button" class="btn btn-grey" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-sliders" aria-hidden="true"></i> Filter</button>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item details-link" href="#" >Continue to Payment</a>
+                <a class="dropdown-item red remove-link" href="#" >Cancel Purchase</a>
+              </div>
             </div>
             <div class="area-to">
               <span class="text-up">Purchaed on : Monday, 11 June 2018, 03:03</span>
@@ -176,10 +180,164 @@
                   Continue to Payment <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Continue to Payment</a>
-                  <a class="dropdown-item red" href="#">Cancel Purchase</a>
+                  <a class="dropdown-item details-link" href="#" >Continue to Payment</a>
+                  <a class="dropdown-item red remove-link" href="#" >Cancel Purchase</a>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="content-bar list-item">
+            <div class="top-block">
+              <strong class="recent">February 2018</strong>
+            </div>
+            <div class="list-content">
+              <div class="area-to">
+                <span class="text-up">Purchaed on : Wednesday, 28 February 2018, 12:44</span>
+                <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              </div>
+              <div class="box-profile no-shadow">
+                <div class="purchase-info">
+                  <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                </div>
+                <div class="price-detail">
+                  <strong class="price-desc">Rp. 305.623</strong>
+                </div>
+              </div>
+              <div class="next-information">
+                <div class="clock">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <span>Purchase Succesfull/span>
+                </div>
+                <div class="dropdown show">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    See Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item details-link" href="#" class="">See Details</a>
+                    <a class="dropdown-item red remove-link" href="#" >Remove Purchase</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list-content">
+              <div class="area-to">
+                <span class="text-up">Purchaed on : Wednesday, 28 February 2018, 12:44</span>
+                <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              </div>
+              <div class="box-profile no-shadow">
+                <div class="purchase-info">
+                  <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                </div>
+                <div class="price-detail">
+                  <strong class="price-desc">Rp. 305.623</strong>
+                </div>
+              </div>
+              <div class="next-information">
+                <div class="clock">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <span>Purchase Succesfull/span>
+                </div>
+                <div class="dropdown show">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    See Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item details-link" href="#" class="">See Details</a>
+                    <a class="dropdown-item red remove-link" href="#" >Remove Purchase</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list-content">
+              <div class="area-to">
+                <span class="text-up">Purchaed on : Wednesday, 28 February 2018, 12:44</span>
+                <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              </div>
+              <div class="box-profile no-shadow">
+                <div class="purchase-info">
+                  <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                </div>
+                <div class="price-detail">
+                  <strong class="price-desc">Rp. 305.623</strong>
+                </div>
+              </div>
+              <div class="next-information">
+                <div class="clock">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <span>Purchase Succesfull/span>
+                </div>
+                <div class="dropdown show">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    See Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item details-link" href="#" class="">See Details</a>
+                    <a class="dropdown-item red remove-link" href="#" >Remove Purchase</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list-content">
+              <div class="area-to">
+                <span class="text-up">Purchaed on : Wednesday, 28 February 2018, 12:44</span>
+                <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              </div>
+              <div class="box-profile no-shadow">
+                <div class="purchase-info">
+                  <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                </div>
+                <div class="price-detail">
+                  <strong class="price-desc">Rp. 305.623</strong>
+                </div>
+              </div>
+              <div class="next-information">
+                <div class="clock">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <span>Purchase Succesfull/span>
+                </div>
+                <div class="dropdown show">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    See Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item details-link" href="#" class="">See Details</a>
+                    <a class="dropdown-item red remove-link" href="#" >Remove Purchase</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list-content">
+              <div class="area-to">
+                <span class="text-up">Purchaed on : Wednesday, 28 February 2018, 12:44</span>
+                <span class="booking plane"><i class="fa fa-plane" aria-hidden="true"></i></span>
+              </div>
+              <div class="box-profile no-shadow">
+                <div class="purchase-info">
+                  <p><strong class="tujuan">Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</strong></p>
+                </div>
+                <div class="price-detail">
+                  <strong class="price-desc">Rp. 305.623</strong>
+                </div>
+              </div>
+              <div class="next-information">
+                <div class="clock">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <span>Purchase Succesfull/span>
+                </div>
+                <div class="dropdown show">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    See Details <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item details-link" href="#" class="">See Details</a>
+                    <a class="dropdown-item red remove-link" href="#" >Remove Purchase</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="load-footer">
+              <p>Your Older Purchase can be found on My Booking history</p>
             </div>
           </div>
         </div>
