--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <div class="form-group">
                     <label for="">Pergi :</label>
                     <img src="assets/img/takeoff.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                       <label class="custom-control-label" for="customControlAutosizing"></label>
                     </div>
                     <img src="assets/img/landing.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
@@ -258,7 +258,7 @@
                   <div class="form-group">
                     <label for="">Pergi :</label>
                     <img src="assets/img/takeoff.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
@@ -270,7 +270,7 @@
                       <label class="custom-control-label" for="customControlAutosizing"></label>
                     </div>
                     <img src="assets/img/landing.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
@@ -326,7 +326,7 @@
                   <div class="form-group">
                     <label for="">Pergi :</label>
                     <img src="assets/img/takeoff.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
@@ -338,7 +338,7 @@
                       <label class="custom-control-label" for="customControlAutosizing"></label>
                     </div>
                     <img src="assets/img/landing.png" alt="" class="icon-before img-fluid">
-                    <input type="date" name="" value="" class="form-control">
+                    <input type="date" name="" value="" class="form-control unstyled">
                     <i class="fa fa-calendar icon" aria-hidden="true"></i>
                   </div>
                 </div>
